detects and makes correct launchscripts of servers